--- a/CSS/Todo.css
+++ b/CSS/Todo.css
@@ -1,11 +1,56 @@
 #container {
-    background: purple;
     width: 360px;
-    margin: 0 auto;
-    border: 12px solid rgb(165, 13, 102);
+    height: 360px;
+    margin: 100px auto;
+    box-shadow: 0 0 3px rgb(165, 13, 102);
 }
 
 .completed {
     color: gray;
     text-decoration: line-through;
+}
+
+h1 {
+    background: #2980b9;
+    color: white;
+    margin: 0;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-size: 24px;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+li {
+    background: #fff;
+    height: 40px;
+    line-height: 40px;
+    color: #666;
+}
+
+li:nth-child(2n) {
+    background: #f7f7f7;
+}
+
+input {
+    font-size: 18px;
+    color: #2980b9;
+    background-color: #f7f7f7;
+    width: 100%;
+    padding: 13px 13px 13px 20px;
+    box-sizing: border-box;
+}
+
+input:focus {
+    background: white;
+    border: 3px solid #2980b9;
+    outline: none;
 }
